# Mountain-API

./: .gitignore  CMakeLists.txt  README.md  compile.sh  initVulkan.cpp  initVulkan.hpp  log.cpp  log.hpp  main.cpp  utils.cpp  utils.hpp
CI/: .drone.yml
assets/shader/: triangle.vert
cmake/: CMakeLists.txt  conan.cmake  utils.cmake
cmake/modules/: FindMountainAPI.cmake
cmake/utils/: export_header.cmake  package.cmake  utils.cmake
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  introduction.md  requirements.txt  table_of_contents.md
docs/code/: getting_started.rst  introduction.md  introduction.rst  reference_api.rst
include/: initVulkan.hpp  log.hpp
mountain/: CMakeLists.txt
mountain/inc/mountain/: command_buffer.h  context.h  context.hpp  graphics_pipeline.h  graphics_pipeline.hpp  initVulkan.h  initVulkan.hpp  load_model.h  no_sanitize.h  sampler.h  swapChain.h  swapChain.hpp
mountain/inc/mountain/buffer/: image2d.h  uniform.h  vertex.h  vertex.hpp  vertex.tpp
mountain/inc/mountain/descriptor_setlayout_binding/: descriptorset_layout.h
mountain/inc/mountain/renderpass/: renderPass.h  renderPass.hpp  render_pass.h
mountain/public_inc/mountain/: command_buffer.h  context.h  descriptorset_layout.h  graphics_pipeline.h  image2d.h  load_model.h  pipeline_builder.h  present.h  render_pass.h  sampler.h  subpass.h  swapChain.h  uniform.h  vertex.h  vertex.tpp
mountain/src/: command_buffer.cpp  context.cpp  graphics_pipeline.cpp  initVulkan.cpp  load_model.cpp  present.cpp  sampler.cpp  swapChain.cpp
mountain/src/buffer/: image2d.cpp  uniform.cpp  vertex.cpp
mountain/src/descriptor_setlayout_binding/: descriptorset_layout.cpp
mountain/src/pipeline/: graphics_pipeline.cpp  pipeline_builder.cpp
mountain/src/renderpass/: renderPass.cpp  render_pass.cpp
sample/: CMakeLists.txt  ressource_paths.h  shader_folder.h
sample/cmake/: compile_shader.cmake  copy_assets.cmake
sample/common/: constant.h  init.cpp  init.h
sample/last/: CMakeLists.txt  main.cpp  triangle.frag  triangle.vert
sample/load_obj/: CMakeLists.txt  main.cpp  triangle.frag
sample/push_constants/: CMakeLists.txt  main.cpp  push_constant.frag  push_constant.vert
sample/skybox/: CMakeLists.txt  main.cpp  triangle.frag  triangle.vert
sample/stencil_buffer/: CMakeLists.txt
sample/stencil_buffer/shaders/: stencil_buffer.frag  stencil_buffer.vert
sample/stencil_buffer/src/: main.cpp
sample/subrenderpass/: CMakeLists.txt
sample/subrenderpass/shaders/: portrait.frag  portrait.vert  viking.vert
sample/subrenderpass/src/: constant.h  init.cpp  init.h  main.cpp
sample/textures/: CMakeLists.txt  main.cpp  texture.vert
sample/triangle/: CMakeLists.txt  main.cpp  triangle.frag  triangle.vert
sandbox_useful/: CMakeLists.txt  RenderPass.cpp  RenderPass.h  basicInit.cpp  basicInit.hpp  device.cpp  device.hpp  swapChain.cpp  swapChain.hpp
sandbox_useful/inc/sandbox_useful/: basicInit.hpp  context.hpp  device.hpp  graphics_pipeline.hpp  initVulkan.hpp  load_model.h  sampler.h  swapChain.hpp
sandbox_useful/inc/sandbox_useful/buffer/: array_buffer.hpp  image2d.h  uniform.h  vertex.hpp  vertex.tpp
sandbox_useful/inc/sandbox_useful/descriptor_setlayout_binding/: descriptorset_layout.h
sandbox_useful/inc/sandbox_useful/renderpass/: renderPass.hpp
sandbox_useful/renderpass/: renderPass.cpp  renderPass.hpp
sandbox_useful/src/: RenderPass.cpp  basicInit.cpp  context.cpp  device.cpp  graphics_pipeline.cpp  initVulkan.cpp  load_model.cpp  sampler.cpp  swapChain.cpp
sandbox_useful/src/buffer/: array_buffer.cpp  image2d.cpp  vertex.cpp
sandbox_useful/src/descriptor_setlayout_binding/: descriptorset_layout.cpp
sandbox_useful/src/renderpass/: renderPass.cpp
shader/: triangle.frag  triangle.vert
src/: initVulkan.cpp  log.cpp  main.cpp  utils.cpp
utils/: CMakeLists.txt
utils/inc/utils/: log.hpp  raii_helper.h  type_trait.hpp  utils.hpp
utils/src/: log.cpp  utils.cpp
window_management/: CMakeLists.txt  extension.h  window.h
window_management/glfw/: window.cpp  window.h
window_management/sdl2/: window.cpp  window.h
